Add a binding to return the result of scanning a psql query
The example is based on a c example from the pgquery lib.

 - Also deleted the queryparser.cc file which seemed to be extraneous

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ RUN apk --no-cache add git
 RUN apk add --no-cache bash
 RUN apk add --no-cache make
 RUN apk add --update alpine-sdk
-RUN apk --no-cache add python3
-
+RUN apk add --no-cache python3
+RUN apk add --no-cache protoc
+RUN apk add --no-cache protobuf-c-dev
 ENTRYPOINT ["/bin/bash"]
