--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.8",
     "node-addon-api": "^1.6.3",
-    "node-gyp": "^10.0.1"
+    "node-gyp": "^10.0.1",
+    "protobufjs": "^7.2.5"
   },
   "keywords": [
     "sql",
